v 1.3.2
	#46 - Supporting IE7.
	#95 - Export and print doesn't remove the html tags.
v 1.3.1
	Updating "Export","Print" and "Minimize/Maximaze" lang strings
	Renewing to the latest tinymce version
	Jquery version 1.8.1 
	Fixing small bugs
v 1.3
	#73 - Jquery version 1.8.0
	#88 - Where clause in set_relation_n_n.
	#87 - Templating system to the  set_relation_n_n method.
	#82 - Have a thumbnail after uploading an image.
	Adding Czech Language.
	Internationalisation for datepicker ui and datetime picker.
	#86 - Print functionality to both flexigrid and datatables theme.
	#85 - Export functionality to both flexigrid and datatables theme.
	Print functionality to datatables theme.
	Having CKEditor as the default texteditor for grocery CRUD.
	Adding Markitup texteditor. Really useful editor for developers.
	#68 - set_relation doesn't work as expected when the third field (title name) is the same on two or more set_relation methods.
	#80 - method order_by doesn't work correctly on datatables theme.
	More configuration values:
		- Choose text-editor between 'ckeditor','tinymce' or 'markitup'.
		- Choose text-editor type between 'minimal' or 'full'.
		- Character limiter at the columns of the list page.
v 1.2.3
	Compatible with Codeigniter version 2.1.1
	Adding Hungarian language.
	Adding new method: field_type. For now it is just an alias to the change_field_type method.
	#49 - Adding new method: set_primary_key.
	#27 - Adding value to enum and set of the change_field_type method.
	#44 - Changing the date format at the list table. For example the 10 Jan 2003 has to be 10/01/2003.
	#56 - Field type true_false now uses default value.
	#42 - Insert ids to all the inputs for easy Javascript changes.
	Bug fixes:
		#30 - Change field type doesn't work if the field is not at the table.
		#38 - required_field doesn't work for relation_n_n fields.
v 1.2.2
	Adding Dutch language. 